# HypergraphPartitioning

./: LICENSE  README.md
K_SpecPart/: .dockerignore  .gitignore  .nfs000000000000145200002fa6  .nfs00000000000015b700002f74  .nfs000000000000351700002fa8  .nfs000000000c6637b2000023b7  CHANGELOG.md  Manifest.toml  Project.toml  README.md  ablation.jl  collect_best_cuts.jl  cut_distillation.jl  definitions.jl  dimensionality_reduction.jl  embedding.jl  eval_cluster_metric.jl  eval_clustering.py  golden_evaluator.jl  hypergraph.jl  io.jl  logging_setup.jl  metis.jl  metis_script.sh  optimal_attempt_partitioner.jl  overlay.jl  projection.jl  regression.jl  regression_ibm.jl  run_fm_refinement.sh  run_kspecpart.jl  run_triton_part_refiner.jl  run_triton_part_refiner.tcl  smoke_test.jl  specpart.jl  titan_sweep.jl  tree_partition.jl
K_SpecPart/ilp_partitioner/: CMakeLists.txt  IlpReadHypergraph.cpp  IlpReadHypergraph.h  Main.cpp
K_SpecPart/ilp_partitioner/ilp_partitioner/: CMakeLists.txt  IlpReadHypergraph.h
K_SpecPart/ilp_partitioner/ilp_partitioner/test/: ibm10.hgr
K_SpecPart/ilp_partitioner/test/: run.sh
Leaderboard/: ISPD98_Leaderboard.xlsx  README.md  Titan23_Leaderboard.xlsx
SpecPart/: Ablation_spec_iters_sweep.jl  AutoTuneSpecPart.jl  Coarsen.jl  ConvertXilinxFormatToHmetis.jl  Default_hmetis.jl  Default_hmetis_ibm_w.jl  Default_hmetis_titan.jl  Default_kahypar_ibm_w.jl  Default_kahypar_xilinx.jl  EstimateClusteringMistakes.jl  ExportHypergraph.jl  FM.jl  GenerateCoarseHypergraph.jl  GenerateFeatures.jl  GenerateHyperedgesHash.jl  HypergraphToIncidence.jl  HypergraphToPairList.jl  InitialPartitions.jl  IterativeSpectral.jl  PartitionILP.jl  PartitionStructures.jl  README.md  ReadFiles.jl  RunMassiveSweep.jl  Run_KaHyPar.jl  SampleHmetis.jl  SpectralRefinement.jl  Spectral_hmetis_ibm.jl  Spectral_hmetis_titan.jl  Spectral_kahypar_ibm.jl  Spectral_kahypar_titan.jl  StructureDetection.jl  TestScript.jl  TestSupervisedSpectral.jl  Uncoarsen.jl  WriteClusters.jl  gpmetis  hMetisVsSpectral.jl  ilp_k_solver.py  (+1 more)
(+2999 files in other folders)
